wrap fixed

--- a/src/components/footer/SocialNetLink/SocialNatLink.module.scss
+++ b/src/components/footer/SocialNetLink/SocialNatLink.module.scss
@@ -5,7 +5,7 @@
   width: 42px;
   height: 42px;
   cursor: pointer;
-  margin: 10px 15px;
+  margin: 20px 15px;
   position: relative;
   display: inline-block;
   &:hover .tooltip {
